<?xml version="1.0" encoding="utf-8"?>
<!-- This file is part of Dotterel which is released under GPL-2.0-or-later. -->
<!-- See file <LICENSE.txt> or go to <http://www.gnu.org/licenses/> for full license details. -->

<resources>
	<string name="app_name">Dotterel</string>
	<string name="subtype_en_US">English (US)</string>

	<string name="add">Add</string>
	<string name="delete">Delete</string>
	<string name="rename">Rename</string>
	<string name="copy">Copy</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="reset">Reset</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="close">Close</string>

	<string name="asset_browser_select_root">Select root</string>

	<string name="input_method_disabled_alert">Dotterel must be enabled as an keyboard before it can be used.\n\nGo to keyboard settings screen?</string>

	<string name="pref_active_system">Active system</string>

	<string name="pref_root">Settings</string>

	<string name="pref_dictionaries">Dictionaries</string>
	<string name="pref_dictionaries_add_asset_dictionary">Add asset</string>

	<string name="pref_systems">Systems</string>
	<string name="pref_systems_active_system_item">%1$s (active)</string>
	<string name="pref_systems_template_system_item">%1$s (template)</string>
	<string name="pref_systems_new">New system</string>
	<string name="pref_systems_rename">Rename system</string>
	<string name="pref_systems_name">System name</string>
	<string name="pref_systems_json">JSON</string>
	<string name="pref_systems_close_file">Close file</string>
	<string name="pref_systems_save_changes">Do you want to save your changes?</string>

	<string name="pref_machines">Machine Settings</string>
	<string name="pref_machines_machines">Machines</string>
	<string name="pref_machines_on_screen">On Screen</string>
	<string name="pref_machines_on_screen_style">Machine style</string>
	<string name="pref_machines_on_screen_min_touch_radius">Minimum touch radius</string>
	<string name="pref_machines_on_screen_max_touch_radius">Maximum touch radius</string>
	<string name="pref_machines_on_screen_padding">Keyboard edge padding</string>
	<string name="pref_machines_on_screen_swipe_bevel_size">Swipe bevel size</string>
	<string name="pref_machines_nkro">NKRO</string>
	<string name="pref_machines_nkro_key_map">Key map</string>
	<string name="pref_machines_nkro_apply_on_stroke_up">Apply on stroke up</string>

	<string name="pref_permissions">Permissions</string>
	<string name="pref_permissions_overlays">Overlays</string>
	<string name="pref_permissions_overlays_summary">Required for pop-up tools. Required to keep the device awake when using serial machines.</string>

	<string name="pref_about">About</string>
	<string name="pref_about_page_url">file:///android_asset/about.html</string>

	<string name="crash_notification_channel">Dotterel crashes</string>
	<string name="crash_notification_title">Crash at %1$s</string>
	<string name="crash_notification_saved_log_to">Saved log file to %1$s</string>
	<string name="crash_notification_save_log_failed">Could not save log file: %1$s</string>
	<string name="crash_notification_subject">Dotterel crash log</string>
	<string name="crash_notification_share">Share</string>

	<string name="lookup_translation_title">Dotterel: Lookup Translation</string>

	<string name="add_translation_title">Dotterel: Add Translation</string>
	<string name="add_translation_dictionary">Dictionary</string>
	<string name="add_translation_strokes">Strokes</string>
	<string name="add_translation_translation">Translation</string>
	<string name="add_translation_overwrite">Overwrite</string>
	<string name="add_translation_existing">Existing</string>

	<string-array name="on_screen_styles">
		<item>Touch</item>
		<item>Swipe</item>
	</string-array>

	<string name="pref_machines_serial_baudrate">Baudrate</string>
	<string name="pref_machines_serial_data_bits">Data bits</string>
	<string name="pref_machines_serial_stop_bits">Stop bits</string>
	<string name="pref_machines_serial_parity">Parity</string>
	<string name="pref_machines_serial_flow_control">Flow control</string>
	<string name="pref_machines_serial_protocol">Protocol</string>

	<string-array name="serial_data_bits">
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
	</string-array>

	<string-array name="serial_stop_bits">
		<item>1</item>
		<item>1.5</item>
		<item>2</item>
	</string-array>

	<string-array name="serial_parity">
		<item>None</item>
		<item>Odd</item>
		<item>Even</item>
		<item>Mark</item>
		<item>Space</item>
	</string-array>

	<string-array name="serial_flow_control">
		<item>Off</item>
		<item>RTS/CTS</item>
		<item>DSR/DTR</item>
		<item>XOn/XOff</item>
	</string-array>

	<string-array name="serial_protocol">
		<item>TxBolt</item>
		<item>GeminiPr</item>
	</string-array>

	<string-array name="empty" />
</resources>
