<?xml version="1.0" encoding="utf-8"?>
<!-- This file is part of Dotterel which is released under GPL-2.0-or-later. -->
<!-- See file <LICENSE.txt> or go to <http://www.gnu.org/licenses/> for full license details. -->

<androidx.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/pref_machines">

	<PreferenceCategory android:key="hidden">

		<SwitchPreference
			android:key="machine/On Screen"
			android:defaultValue="true" />

		<EditTextPreference
			android:key="machineConfig/On Screen"
			android:defaultValue="{&quot;style&quot;: &quot;Touch&quot;}" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="machines"
		android:title="@string/pref_machines_machines" />

	<PreferenceCategory
		android:key="On Screen"
		android:title="@string/pref_machines_on_screen">

		<ListPreference
			android:entries="@array/on_screen_styles"
			android:entryValues="@array/on_screen_styles"
			android:negativeButtonText="@null"
			android:positiveButtonText="@null"
			android:title="@string/pref_machines_on_screen_style">
			<extra android:name="store_type" android:value="json_preference" />
			<extra android:name="store_path" android:value="machineConfig/On Screen" />
			<extra android:name="key" android:value="style" />
			<extra android:name="bindSummaryToValue" android:value="true" />
		</ListPreference>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="NKRO"
		android:title="@string/pref_machines_nkro">

		<nimble.dotterel.KeyMapPreference
			android:key="machineConfig/NKRO/layout"
			android:title="@string/pref_machines_nkro_key_map">
			<extra android:name="type" android:value="system" />
			<extra android:name="store_type" android:value="json_file" />
			<extra android:name="key" android:value="machineConfig/NKRO/layout" />
		</nimble.dotterel.KeyMapPreference>

	</PreferenceCategory>

</androidx.preference.PreferenceScreen>
