<?xml version="1.0" encoding="utf-8"?>
<!-- This file is part of Dotterel which is released under GPL-2.0-or-later. -->
<!-- See file <LICENSE.txt> or go to <http://www.gnu.org/licenses/> for full license details. -->

<androidx.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="Settings">

	<ListPreference
		android:key="system"
		android:title="Active system">
		<extra android:name="bindSummaryToValue" android:value="true" />
	</ListPreference>

	<Preference
		android:fragment="nimble.dotterel.DictionariesPreferenceFragment"
		android:title="@string/pref_dictionaries">
		<extra android:name="type" android:value="system" />
		<extra android:name="store_type" android:value="json_file" />
		<extra android:name="key" android:value="dictionaries" />
	</Preference>

	<Preference
		android:fragment="nimble.dotterel.InterfacePreferenceFragment"
		android:title="Interface" />

	<Preference
		android:fragment="nimble.dotterel.SystemsPreferenceFragment"
		android:title="@string/pref_systems" />

	<Preference
		android:fragment="nimble.dotterel.MachinesPreferenceFragment"
		android:title="@string/pref_machines" />

	<Preference
		android:key="permissions"
		android:fragment="nimble.dotterel.PermissionsPreferenceFragment"
		android:title="@string/pref_permissions" />

	<Preference
		android:fragment="nimble.dotterel.AboutFragment"
		android:title="@string/pref_about" />

</androidx.preference.PreferenceScreen>
